dev/veidemann/veidemann-controller/controller_ca_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-controller
spec:
  template:
    spec:
      volumes:
        - name: ca
          secret:
            optional: false
            defaultMode: 420
            items:
              - key: tls.crt
                path: tls.crt
            secretName: veidemann-cert
      containers:
        - name: veidemann-controller
          volumeMounts:
            - mountPath: /veidemann/trustedca/tls.crt
              name: ca
              subPath: tls.crt
