dev/veidemann/veidemann-controller/controller_ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grpcweb-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /grpc-web
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: veidemann-controller
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/veidemann.api`)
      kind: Rule
      services:
        - name: veidemann-controller
          port: 7700
          scheme: h2c
    - match: PathPrefix(`/grpc-web`)
      kind: Rule
      middlewares:
        - name: grpcweb-stripprefix
      services:
        - name: veidemann-controller
          port: 10000
  tls: {}
